--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 
 html{
   scroll-behavior: smooth;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 body {
@@ -20,4 +20,17 @@ body.dark{
 }
 body.light{
   color: black;
+}
+
+
+@media (max-width: 2200px) {
+  html{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1560px) {
+  html{
+    font-size: 14px;
+  }
 }
