--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -19,7 +19,10 @@
     gap: 10px;
     flex: 1;
     position: relative;
-    min-width: 200px;
+
+    @media (max-width: 1200px) {
+      min-width: 200px;
+    }
   }
 
   .underline {
