add other projects + fixes

--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -20,9 +20,9 @@
   flex: 1;
   position: relative;
 
-  @media (max-width: 1200px) {
-   min-width: 200px;
-  }
+  //   @media (max-width: 1200px) {
+  min-width: 200px;
+  //   }
  }
 
  .underline {
